--- a/public/css/dashboard/heinz.css
+++ b/public/css/dashboard/heinz.css
@@ -6,6 +6,33 @@
     margin-top: 25px;
     border-radius: 0;
 }
+.heinz-progress{
+  height: 22px;
+  margin-top: 20px;
+}
+.heinz-progress h4.modal-title{
+  font-size: 13px;
+    position: relative;
+    /* top: -8px; */
+    color: white;
+    font-weight: 500;
+}
+.dragdrop{
+  margin-top: 10px;
+}
+.dragdrop button{
+  border-radius: 0;
+  font-size: 12px;
+  padding-bottom: 0px;
+  padding-top: 0px;
+  padding-right: 10px;
+  padding-left: 10px;
+  margin-bottom: 10px;
+  border-color: gray;
+}
+.m-top-20{
+  margin-top: 20px;
+}
 .heiz-dashboard-forms textarea{
     resize: none;
     width: 100%;
@@ -67,8 +94,8 @@
     padding-top: 45px;
     border-radius: 30px; */
     background: #2b3c51;
-height: 400px;
-padding-top: 45px;
+height: 325px;
+padding-top: 0px;
 /* border-radius: 30px; */
 margin-top: 30px;
 }
@@ -82,19 +109,20 @@ margin-top: 30px;
 }
 .c-stats h5{
   color: aliceblue;
-  font-size: 16px;
+  font-size: 13px;
 }
 .c-stats h5 > span{
-  font-size: 20px;
+  font-size: 16px;
   color: #fbe0c0;
 }
 .heinz-dashboard-nav-cards .card-box .text-white{
     /* color: orangered; */
+    font-size: 14px;
 }
 .heinz-dashboard-nav-cards .card-box button{
   border-radius: 50%;
-  width: 140px;
-  height: 140px;
+  width: 125px;
+  height: 125px;
   color: white;
   font-size: 30px;
   font-weight: 400;
