--- a/public/backend/css/override.css
+++ b/public/backend/css/override.css
@@ -58,10 +58,18 @@
   margin-left: 10px;
   margin-right: 10px;
 }
+.text-number{
+  text-align: right;
+}
 .back.bb > a{
   color: brown;
   position: relative;
   top: -12px;
+}
+.gtotal >td {
+  padding: 20px!important;
+  border-top: 1px solid!important;
+
 }
 .heinz-dashboard-nav-cards{
   /* background: url('../images/small/img-2.jpg'); */
